<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rclada_tf2</name>
  <version>0.1.0</version>
  <description>Ada wrapper for tf2_ros</description>
  <maintainer email="alejandro@mosteo.com">jano</maintainer>
  <license>LGPL 3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>rclada_common</depend>
  <depend>rclada</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
